--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Contato</h2>
         </div>
 
         <div class="row mt-1">
@@ -665,7 +665,9 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSenWkpz7m1aMQt83cIxm99aAtfk4IwRD0yw47WcZvEbcVwusQ/viewform?embedded=true" width="640" height="574" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+
+            <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" required>
@@ -686,7 +688,7 @@
                 <div class="sent-message">Sua mensagem foi enviada. Obrigado!</div>
               </div>
               <div class="text-center"><button type="submit">Enviar e-mail</button></div>
-            </form>
+            </form> -->
 
           </div>
 
